@@ -9,8 +9,8 @@
 	<packaging>pom</packaging>
 
 	<description>
-		The spOt microservice framework.
-	</description>
+        The spOt microservice framework.
+    </description>
 
 	<organization>
 		<url>https://spot-next.io</url>
@@ -65,18 +65,19 @@
 				</plugins>
 			</build>
 		</profile>
+
 	</profiles>
 
 	<scm>
 		<connection>scm:git:https://github.com/mojo2012/spot-framework.git</connection>
 		<developerConnection>scm:git:https://github.com/mojo2012/spot-framework.git</developerConnection>
-		<url>https://github.com/mojo2012/spot-framework/tree/master</url>
+		<url>https://github.com/spot-next/spot-framework/tree/master</url>
 		<tag>HEAD</tag>
 	</scm>
 
 	<ciManagement>
 		<system>travis-ci</system>
-		<url>https://travis-ci.org/mojo2012/spot-framework/</url>
+		<url>https://travis-ci.org/spot-next/spot-framework/</url>
 	</ciManagement>
 
 	<developers>
@@ -104,6 +105,9 @@
 	<contributors>
 		<contributor>
 			<name>Thomas Rotter</name>
+		</contributor>
+		<contributor>
+			<name>Benjamin Nussbaum</name>
 		</contributor>
 	</contributors>
 
@@ -137,17 +141,18 @@
 		<!-- compiling -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<aspectj.version>1.9.2</aspectj.version>
+		<maven.compiler.source>10</maven.compiler.source>
+		<maven.compiler.target>10</maven.compiler.target>
+		<java.version>10</java.version>
 
 		<!-- misc -->
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<log4j.version>2.11.1</log4j.version>
 		<junit.version>4.12</junit.version>
+		<junit.jupiter.version>5.3.1</junit.jupiter.version>
 		<spring.boot.version>2.1.0.RELEASE</spring.boot.version>
 		<spring.version>5.1.2.RELEASE</spring.version>
 
@@ -333,28 +338,22 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.8.0</version>
 					<configuration>
-						<source>${java.version}</source>
-						<target>${java.version}</target>
 						<useIncrementalCompilation>true</useIncrementalCompilation>
-						<!-- <skip>true</skip> -->
-						<!-- <skipMain>true</skipMain> -->
+						<release>${maven.compiler.target}</release>
+						<compilerArgs>
+							<arg>
+								-XDcompilePolicy=simple
+								-Xplugin:ErrorProne
+							</arg>
+						</compilerArgs>
+						<annotationProcessorPaths>
+							<path>
+								<groupId>com.google.errorprone</groupId>
+								<artifactId>error_prone_core</artifactId>
+								<version>2.3.2</version>
+							</path>
+						</annotationProcessorPaths>
 					</configuration>
-					<!-- <executions> -->
-					<!-- <execution> -->
-					<!-- <id>default-compile</id> -->
-					<!-- <phase>none</phase> -->
-					<!-- <goals> -->
-					<!-- <goal>compile</goal> -->
-					<!-- </goals> -->
-					<!-- </execution> -->
-					<!-- <execution> -->
-					<!-- <id>default-test-compile</id> -->
-					<!-- <phase>none</phase> -->
-					<!-- <goals> -->
-					<!-- <goal>test-compile</goal> -->
-					<!-- </goals> -->
-					<!-- </execution> -->
-					<!-- </executions> -->
 				</plugin>
 
 				<!-- aspectj weaving is done at load-time -->
@@ -375,18 +374,17 @@
 						</dependency>
 					</dependencies>
 					<configuration>
-						<complianceLevel>1.8</complianceLevel>
-						<source>1.8</source>
-						<target>1.8</target>
 						<aspectLibraries>
 							<aspectLibrary>
 								<groupId>org.springframework</groupId>
 								<artifactId>spring-aspects</artifactId>
 							</aspectLibrary>
 						</aspectLibraries>
+						<argumentFileName>../ajc-arguments.log</argumentFileName>
 
 						<!-- setting this to true can cause build errors im M2E -->
 						<showWeaveInfo>true</showWeaveInfo>
+						<complianceLevel>${java.version}</complianceLevel>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
 						<Xlint>ignore</Xlint>
@@ -452,7 +450,7 @@
 				<plugin>
 					<groupId>org.bsc.maven</groupId>
 					<artifactId>maven-processor-plugin</artifactId>
-					<version>3.3.2</version>
+					<version>3.3.3</version>
 				</plugin>
 
 				<plugin>
@@ -474,10 +472,11 @@
 					<artifactId>spring-boot-maven-plugin</artifactId>
 					<version>${spring.boot.version}</version>
 					<configuration>
-					<arguments>
-						<!-- this has to be here WITHOUT an actual value, otherwise the spring-boot:run mojo wouldn't work -->
-						<argument>--spring.main.allow-bean-definition-overriding=true</argument>
-					</arguments>
+						<arguments>
+							<!-- this has to be here WITHOUT an actual value, otherwise the spring-boot:run mojo wouldn't work -->
+							<argument>--spring.main.allow-bean-definition-overriding=true</argument>
+						</arguments>
+						<jvmArguments>--add-opens java.base/java.lang=ALL-UNNAMED</jvmArguments>
 					</configuration>
 					<executions>
 						<execution>
@@ -501,9 +500,6 @@
 									<java.source>${java.version}</java.source>
 									<java.target>${java.version}</java.target>
 								</additionalProperties>
-								<jvmArguments>
-									-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000
-								</jvmArguments>
 							</configuration>
 						</execution>
 					</executions>
@@ -511,21 +507,15 @@
 
 				<!-- CODE ANALYSIS -->
 				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>findbugs-maven-plugin</artifactId>
-					<version>3.0.5</version>
+					<groupId>com.github.spotbugs</groupId>
+					<artifactId>spotbugs-maven-plugin</artifactId>
+					<version>3.1.8</version>
 					<configuration>
-						<effort>Max</effort>
-						<!-- Enables analysis which takes more memory but finds more bugs. If you run out of memory, changes the value of the effort element to 'low'. -->
-						<effort>medium</effort>
-						<!-- Reports all bugs (other values are medium and max) -->
-						<threshold>Low</threshold>
-						<!-- Produces XML report -->
-						<xmlOutput>true</xmlOutput>
-						<findbugsXmlOutputDirectory>${project.build.directory}/findbugs</findbugsXmlOutputDirectory>
+						<effort>more</effort>
+						<jvmArgs>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</jvmArgs>
 					</configuration>
 					<executions>
-						<!-- Ensures that FindBugs inspects source code when project is deployed. -->
+						<!-- Ensures that spotbugs inspects source code when project is deployed. -->
 						<execution>
 							<id>analyze-deploy</id>
 							<phase>deploy</phase>
@@ -578,6 +568,10 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.18.1</version>
+					<configuration>
+						<!-- <debugForkedProcess>true</debugForkedProcess> -->
+						<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</argLine>
+					</configuration>
 				</plugin>
 
 				<plugin>
@@ -588,6 +582,8 @@
 						<includes>
 							<include>**/*IT.java</include>
 						</includes>
+						<!-- <debugForkedProcess>true</debugForkedProcess> -->
+						<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</argLine>
 					</configuration>
 					<executions>
 						<execution>
@@ -635,7 +631,8 @@
 					<configuration>
 						<failOnError>false</failOnError>
 						<additionalparam>-Xdoclint:none</additionalparam>
-						<excludePackageNames>io.spotnext.core.infrastructure.maven.xml:*itemtype*:*Mojo*</excludePackageNames>
+						<excludePackageNames>io.spotnext.core.infrastructure.maven.xml:*itemtype*:*Mojo*
+						</excludePackageNames>
 						<excludes>**/gen/*</excludes>
 						<quiet>true</quiet>
 						<!-- does not work with revision property! -->
@@ -716,6 +713,10 @@
 						<keepStagingRepositoryOnFailure>true</keepStagingRepositoryOnFailure>
 						<stagingProfileId>5f2e64bdcef503</stagingProfileId>
 						<stagingDescription>spOt staging repo</stagingDescription>
+
+						<!-- TODO: disable if possible -->
+						<sslInsecure>true</sslInsecure>
+						<sslAllowAll>true</sslAllowAll>
 					</configuration>
 					<executions>
 						<execution>
@@ -844,26 +845,14 @@
 	<reporting>
 		<plugins>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>3.0.5</version>
-				<configuration>
-					<skip>true</skip>
-					<!-- Enables analysis which takes more memory but finds more bugs. If you run out of memory, changes the value of the effort element to 'low'. -->
-
-					<effort>Max</effort>
-					<!-- Reports all bugs (other values are medium and max) -->
-					<threshold>Low</threshold>
-					<failOnError>true</failOnError>
-					<xmlOutput>true</xmlOutput>
-					<findbugsXmlOutputDirectory>${project.build.directory}/findbugs</findbugsXmlOutputDirectory>
-				</configuration>
+				<groupId>com.github.spotbugs</groupId>
+				<artifactId>spotbugs-maven-plugin</artifactId>
 			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.5</version>
+				<version>3.0.0</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -881,7 +870,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>3.8</version>
+				<version>3.0.0</version>
 				<configuration>
 					<configLocation>config/sun_checks.xml</configLocation>
 				</configuration>
@@ -903,28 +892,17 @@
 			<version>${aspectj.version}</version>
 		</dependency>
 
-		<!-- findbugs -->
-		<dependency>
-			<groupId>com.google.code.findbugs</groupId>
-			<artifactId>annotations</artifactId>
-			<version>3.0.1u2</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.google.code.findbugs</groupId>
-					<artifactId>jsr305</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.jcip</groupId>
-					<artifactId>jcip-annotations</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
 		<!-- apache tools -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
 			<version>4.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.spotbugs</groupId>
+			<artifactId>spotbugs-annotations</artifactId>
+			<version>3.1.8</version>
 		</dependency>
 
 	</dependencies>
@@ -941,6 +919,12 @@
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
 				<version>1.7.25</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.spotbugs</groupId>
+				<artifactId>spotbugs-annotations</artifactId>
+				<version>3.1.8</version>
+				<scope>provided</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
